# fuzzy-logic-search

./: .gitignore  CLAUDE.md  Makefile  README.html  README.md  conf.py  pyproject.toml  setup.py
README_files/libs/bootstrap/: bootstrap-6557ce804185a42b51bfe31343ca79d9.min.css
_build/doctrees/: README.doctree  environment.pickle  index.doctree
_build/doctrees/old/: README.doctree  algebraic_ranked_search.doctree
_build/html/: .buildinfo  .buildinfo.bak  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/old/: README.html
build_docs/source/: algebraic_search.rst
dev/old/: README.md  algebraic_ranked_search.ipynb  algebraic_search.ipynb  algebraic_search_newer.ipynb  crisp_membership_generator.py  fuzzy_json_query.py
docs/: genindex.html  objects.inv  py-modindex.html  search.html
docs/_sources/: README.md.txt  index.rst.txt
docs/_sources/old/: algebraic_ranked_search.md.txt
docs/old/: algebraic_ranked_search.html
fuzzy_logic_search/: __init__.py  console_script.py  fuzzy_eval.py  fuzzy_json_query.py  fuzzy_set.py  lazy_fuzzy_streams.py  membership_functions.py  query_parser.py  utils.py
notebooks/: boolean_query.ipynb  fuzzy.ipynb  fuzzy_json.ipynb  fuzzy_oolean_query.ipynb
old/: algebraic_search.ipynb  fuzzy_json_query_backup.py  test.py
src/algebraic_search/: boolean_query.py  default_preds.py  defuzz_fuzzy_set.py  fuzzy_boolean_query.py  fuzzy_query.py  fuzzy_set_algebra.py  fuzzy_set_mods.py  fuzzy_set_sampling.py  result_query.py  td_idf_score.py  utils.py
src/algebraic_search/nltk_stuff/: Untitled-1.ipynb  test.ipynb  test1.py  test2.py  test2_nb.ipynb
src/algebraic_search/utils/: stemming.py
src/fuzzy-logic-search/: fuzzy_json_query.py
src/fuzzy-logic-search/utils/: corpus.py
tests/: fuzzy_json_query_field_path_tests.py  test_fuzzy_json_query_field_path.py  test_fuzzy_set.py  test_lazy_fuzzy_streams.py  test_membership_functions.py  test_query_parser.py
(+7 files in other folders)
