[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuzzy-logic-search"
version = "0.1.0"
description = "A fuzzy logic-based search system"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Alex Towell", email = "lex@metafunctor.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scikit-fuzzy>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fuzzy-logic-search"
Repository = "https://github.com/yourusername/fuzzy-logic-search"
Issues = "https://github.com/yourusername/fuzzy-logic-search/issues"

[project.scripts]
fls = "fuzzy_logic_search.console_script:main"

[tool.hatch.build.targets.wheel]
packages = ["fuzzy_logic_search"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=fuzzy_logic_search --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true